// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginReadmeList ReadmeList render default 1`] = `
<div
  class="Component-window-0-1-11 Component-windowBright-0-1-13 Component-windowAutoStretch-0-1-12"
  tabindex="1"
>
  <div
    class="ReadmeListRaw-windowBody-0-1-1 Component-body-0-1-16"
  >
    <ul
      class="ReadmeListRaw-ul-0-1-3"
    >
      <li
        class="ReadmeListRaw-li-0-1-4 undefined"
      >
        <button
          class="Component-box-0-1-17"
        >
          <div
            aria-hidden="true"
            class="Component-markdownWindow-0-1-19"
          >
            <div
              class="Component-markdownSpacing-0-1-20"
            >
              <div
                class="Component-markdown-0-1-21"
              >
                <div>
                  markdown
                </div>
              </div>
            </div>
          </div>
          <h6
            class="Component-title-0-1-18"
          >
            title
          </h6>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`PluginReadmeList ReadmeList render fullscreen 1`] = `
<div
  class="Component-window-0-1-11 Component-windowBright-0-1-13 Component-windowAutoStretch-0-1-12"
  tabindex="1"
>
  <div
    class=" Component-header-0-1-26"
  >
    <p
      class="Component-title-0-1-28"
    >
      custom title
    </p>
  </div>
  <div
    class="ReadmeListRaw-windowBody-0-1-1 Component-body-0-1-16"
  >
    <ul
      class="ReadmeListRaw-ul-0-1-3"
    >
      <li
        class="ReadmeListRaw-li-0-1-4 undefined"
      >
        <button
          class="Component-box-0-1-17"
        >
          <div
            aria-hidden="true"
            class="Component-markdownWindow-0-1-19"
          >
            <div
              class="Component-markdownSpacing-0-1-20"
            >
              <div
                class="Component-markdown-0-1-21"
              >
                <div>
                  markdown
                </div>
              </div>
            </div>
          </div>
          <h6
            class="Component-title-0-1-18"
          >
            title
          </h6>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
